# OCR

./: README.md  pyproject.toml
ocr/: ocr.py
