[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Naoya TAKIMOTO <ibanstraght@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
numpy = "^1.26.2"
six = "^1.16.0"
easyocr = "^1.7.1"
imageio = "^2.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"